Cleaned up a bit the code Added the objects.h in utils that holds structs etc Added the Engines to test the Surface Simplification and the Spatiotemporal frame sampling separately and organize the code a bit more.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,12 +32,15 @@ add_subdirectory(Camera)
 add_subdirectory(Texture)
 add_subdirectory(Mesh)
 add_subdirectory(Light)
+add_subdirectory(Engines)
+add_subdirectory(Utils)
 include_directories(Shader)
 include_directories(Camera)
 include_directories(Texture)
 include_directories(Mesh)
 include_directories(Light)
-
+include_directories(Engines)
+include_directories(Utils)
 #######################
 # INCLUDE_DIRECTORIES(your/header/dir)
 # LINK_DIRECTORIES(your/library/dir)
@@ -54,7 +57,7 @@ include_directories(/home/marcelo/Downloads/assimp-4.0.0/build/include)
 LINK_DIRECTORIES(/home/marcelo/Downloads/assimp-4.0.0/build/code)
 
 set(SOURCE ${SOURCE} model.cpp model.h)
-add_executable(${PROJECT_NAME} ${SRC_LIST} ${SOURCE} ${HEADER} ${PROJECT_SOURCE_DIR}/stb_image.h ${PROJECT_SOURCE_DIR}/container.jpg)
+add_executable(${PROJECT_NAME} ${SRC_LIST} ${SOURCE} ${HEADER})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GLUT_LIBRARY})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENGL_LIBRARY})
 target_link_libraries(${PROJECT_NAME} libassimp.so libassimp.so.4)
