Image Reading is not working for both PGM and PPM

--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -3,5 +3,9 @@ set(HEADER ${HEADER}
          ${CMAKE_CURRENT_SOURCE_DIR}/objects.h
          ${CMAKE_CURRENT_SOURCE_DIR}/stb_image.h
          ${CMAKE_CURRENT_SOURCE_DIR}/CImg.h
-	 PARENT_SCOPE
+        ${CMAKE_CURRENT_SOURCE_DIR}/image.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/image.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/pgmb_io.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/pgmb_io.hpp
+                 PARENT_SCOPE
     )
