Added the ppm reader and deleted all third party libraries for reading images. I finally displayed the image using a simple display() function, but the image is upside down.

--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -2,10 +2,9 @@ set(targetname TextureGen)
 set(HEADER ${HEADER}
          ${CMAKE_CURRENT_SOURCE_DIR}/objects.h
          ${CMAKE_CURRENT_SOURCE_DIR}/stb_image.h
-         ${CMAKE_CURRENT_SOURCE_DIR}/CImg.h
         ${CMAKE_CURRENT_SOURCE_DIR}/image.h
         ${CMAKE_CURRENT_SOURCE_DIR}/image.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/pgmb_io.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/pgmb_io.hpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/imfragsh.fsh
+        ${CMAKE_CURRENT_SOURCE_DIR}/imvertsh.vsh
                  PARENT_SCOPE
     )
