The Image class is working well now and loading PPM files correctly.

--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -4,7 +4,10 @@ set(HEADER ${HEADER}
          ${CMAKE_CURRENT_SOURCE_DIR}/stb_image.h
         ${CMAKE_CURRENT_SOURCE_DIR}/image.h
         ${CMAKE_CURRENT_SOURCE_DIR}/image.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/imfragsh.fsh
-        ${CMAKE_CURRENT_SOURCE_DIR}/imvertsh.vsh
+        ${CMAKE_CURRENT_SOURCE_DIR}/GLSL/imfragsh.fsh
+        ${CMAKE_CURRENT_SOURCE_DIR}/GLSL/imvertsh.vsh
                  PARENT_SCOPE
     )
+
+INCLUDE_DIRECTORIES(GLSL)
+add_subdirectory(GLSL)
