Filters Were added

--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -4,6 +4,7 @@ set(HEADER ${HEADER}
          ${CMAKE_CURRENT_SOURCE_DIR}/stb_image.h
         ${CMAKE_CURRENT_SOURCE_DIR}/image.h
         ${CMAKE_CURRENT_SOURCE_DIR}/image.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/imagefilters.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/GLSL/imfragsh.fsh
         ${CMAKE_CURRENT_SOURCE_DIR}/GLSL/imvertsh.vsh
                  PARENT_SCOPE
