Temporal Sampling is working now, however it is still taking some time to process.

--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -2,11 +2,12 @@ set(targetname TextureGen)
 set(HEADER ${HEADER}
          ${CMAKE_CURRENT_SOURCE_DIR}/objects.h
          ${CMAKE_CURRENT_SOURCE_DIR}/stb_image.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/image.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/image.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/imagefilters.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/GLSL/imfragsh.fsh
-        ${CMAKE_CURRENT_SOURCE_DIR}/GLSL/imvertsh.vsh
+         ${CMAKE_CURRENT_SOURCE_DIR}/image.h
+         ${CMAKE_CURRENT_SOURCE_DIR}/image.cpp
+         ${CMAKE_CURRENT_SOURCE_DIR}/imagefilters.cpp
+         ${CMAKE_CURRENT_SOURCE_DIR}/imageprocessing.cpp
+         ${CMAKE_CURRENT_SOURCE_DIR}/GLSL/imfragsh.fsh
+         ${CMAKE_CURRENT_SOURCE_DIR}/GLSL/imvertsh.vsh
                  PARENT_SCOPE
     )
 
