Tried to blend multitexture by putting everything in one texture. It didn't really work as the blending makes it look weird. Now we are going to implement the PGM in the model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_subdirectory(Teddy/Frames)
 add_subdirectory(Teddy/Poses)
 file(GLOB frames_teddy "Teddy/Frames/*.ppm")
 file(GLOB poses_teddy "Teddy/Poses/*.txt")
+file(GLOB frames_teddy_pgm "Teddy/Frames/*.pgm")
 include_directories(Shader)
 include_directories(Camera)
 include_directories(Texture)
@@ -62,7 +63,7 @@ include_directories(/home/marcelo/Downloads/assimp-4.0.1/build/include)
 LINK_DIRECTORIES(/home/marcelo/Downloads/assimp-4.0.1/build/code)
 
 set(SOURCE ${SOURCE} model.cpp model.h)
-add_executable(${PROJECT_NAME} ${SRC_LIST} ${SOURCE} ${HEADER} ${frames_teddy} ${poses_teddy})
+add_executable(${PROJECT_NAME} ${SRC_LIST} ${SOURCE} ${HEADER} ${frames_teddy} ${poses_teddy} ${frames_teddy_pgm})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GLUT_LIBRARY})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENGL_LIBRARY})
 
